# Vehicle-Telemetry-and-Control-Node-VTCN-

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  REVIEWING.md  TESTING.md  package-lock.json  vtcn_governance_docs.md  vtcn_milestones_and_github_issues.md  vtcn_weekend_sprint_issue_pack.md
.github/: pull_request_template.md
.github/workflows/: ci-build-test.yml
docs/adr/: ADR-000-phase0-host-signal-pipeline-baseline.md  ADR-001-hal-separation.md  ADR-002-telemetry-framing.md  ADR-003-mcu-coprocessor.md
docs/ai/: ai_context.md  ai_rules.md  project_summary.md
docs/architecture/: component_boundaries.md  data_flow.md  failure_modes.md  system_overview.md
docs/interfaces/: edge_ai_diagnostics_contract.md  hal_adc.md  hal_gpio.md  hal_i2c.md  hal_spi.md  hal_uart.md  mcu_protocol.md  telemetry_protocol.md  vtcn_to_eaip_v1.md
docs/notes/: cpp-interview-prep-plan.md  cpp-patterns-crosswalk.md  epi-cpp-problem-solving-playbook.md  epi-cpp-study-guide.md  epi-vtcn-crosswalk.md
docs/procedures/: adc_validation.md  beaglebone_bringup.md  cross_compile_setup.md  debugging_workflow.md  virtual_development_mode.md
roadmap/: README.md
roadmap/components/: README.md
toolchain/: beaglebone-gcc.cmake  build.sh  deploy.sh
vtcn-daemon/: CMakeLists.txt
vtcn-daemon/include/vtcn/config/: phase0_runtime.hpp
vtcn-daemon/include/vtcn/crank/: CrankTypes.hpp  GapDetector.hpp  ICrankPulseSource.hpp  RpmEstimator.hpp  SimulatedCrankPulseSource.hpp
vtcn-daemon/include/vtcn/runtime/: CrankDemoRuntime.hpp
vtcn-daemon/src/: crank_demo_runtime.cpp  gap_detector.cpp  main.cpp  phase0_runtime.cpp  rpm_estimator.cpp  simulated_crank_pulse_source.cpp
vtcn-daemon/tests/integration/: crank_demo_smoke.cpp  daemon_startup_smoke.cpp
vtcn-daemon/tests/unit/: crank_demo_runtime_test.cpp  gap_detector_test.cpp  phase0_runtime_test.cpp  rpm_estimator_tests.cpp  simulated_crank_pulse_source_test.cpp
